# AutoCodex

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: events.py  graph.py  pacing.py  state.py  steps.py
backend/app/agent/nodes/: __init__.py  fetch.py  ingest.py  parse.py  search.py  validate.py
backend/app/api/routes/: agent.py  auth.py  cars.py  chat.py  health.py  manuals.py  vision.py
backend/app/api/schemas/: auth.py  cars.py  chat.py  manuals.py  vision.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/db/: __init__.py  models.py  repo.py  session.py
backend/app/eval/: __init__.py  __main__.py  dataset.py  harness.py  metrics.py
backend/app/llm/: __init__.py  client.py  rag.py  vehicle.py
backend/app/rag/: __init__.py  chunk.py  extract.py  models.py  process.py  sample.py  store.py
backend/app/services/: ingestion.py
backend/app/tools/: __init__.py  fetch.py  models.py  search.py  validate.py
backend/app/vision/: __init__.py  identify.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_eval.py  test_health.py  test_llm.py  test_persistence.py  test_rag.py  test_store.py  test_tools.py  test_upload.py  test_vision.py
frontend/: .env.example  index.html  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  endpoints.ts  manuals.ts  mocks.ts  vision.ts
frontend/src/auth/: AuthContext.tsx  AuthScreen.tsx  token.ts
frontend/src/components/: Header.tsx  UploadDropzone.tsx  icons.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  Suggestions.tsx  TypingIndicator.tsx
frontend/src/components/hero/: ExampleChips.tsx  HeroInput.tsx
frontend/src/components/progress/: AgentProgress.tsx  ManualsIndexed.tsx  PipelineStep.tsx
frontend/src/hooks/: useAssistant.ts
frontend/src/types/: index.ts
