[project]
name = "car-manual-rag-backend"
version = "0.1.0"
description = "Agentic car-manual RAG assistant — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

# Phase 2 dependencies (added per sub-phase as we wire each layer):
#   2.1 orchestration   langgraph, langchain-core
#   2.2 llm             anthropic, langchain-anthropic
#   2.3 search/fetch    tavily-python, httpx
#   2.4 doc processing  pymupdf, pdfplumber, langchain-text-splitters
#   2.5 vector store    chromadb, langchain-chroma  (+ embeddings provider)
#   2.6 persistence     sqlalchemy, alembic, psycopg[binary]
#   2.7 evaluation      ragas (optional)

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
