[project]
name = "car-manual-rag-backend"
version = "0.1.0"
description = "Agentic car-manual RAG assistant — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # 2.1 orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "sse-starlette>=2.1",
    # 2.2 llm — provider-swappable: Google Gemini (cloud) or Ollama (local)
    "langchain-google-genai>=2.1",
    "langchain-ollama>=0.2",
    # 2.3 search & fetch
    "tavily-python>=0.5",
    "httpx>=0.27",
    # 2.4 document processing
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "langchain-text-splitters>=0.3",
    # 2.5 vector store (embeddings via langchain-google-genai, already present)
    "chromadb>=0.5",
    "langchain-chroma>=0.1",
    # 2.6 persistence — SQLite (dev) / Postgres (prod) via SQLAlchemy
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    # auth + file upload
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
]

# 2.7 evaluation uses the existing stack; RAGAS is optional (heavy) and omitted.

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are fine as argument defaults.
extend-immutable-calls = ["fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
